# bngsim

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ACKNOWLEDGMENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REPRODUCING.md  SUPPORT_MATRIX.md  pyproject.toml  run_tests.sh
.github/workflows/: lint.yml  mir.yml  native-tests.yml  release.yml  wheels.yml  windows-nfsim-repro.yml  windows-nfsim.yml  windows-tail.yml
benchmarks/: .gitignore  README.md  _effort.py  _emit.py  _netbench.py  check_notebooks.py  convert_sbml_to_ant.py  run_all.py
benchmarks/_dev/: README.md  bench_aj_comparison.py  bench_analytical_jac.py  bench_codegen.py  bench_diffrax.py  bench_jac_strategy.py  bench_jax_jacobian.py  bench_parallel_sensitivity.py  bench_sensitivity.py  gen_metapop.py  suite_ode.json  suite_psa.json  suite_ssa.json  test_coloring_quick.py  test_sparse_quick.py  triage_bngl.py
benchmarks/biomodels_ssa/: .gitignore  README.md  biomodels_ant_pool.py  biomodels_ant_pool_manifest.json  config.py  requirements.txt  run_pipeline.sh  step1_fetch.py  step2_filter.py  step3_convert.py  step4_validate.py  step5_report.py  step6_validate_full.py  utils.py
benchmarks/bngxml/: README.md  test_tfun_observable.bngl
benchmarks/kernel/: README.md  kernel_example.py  mvp_kernel_demo.py  operator_split_example.py  warm_path_bench.py
benchmarks/models/: README.md
benchmarks/sbml_events/: BIOMD0000000699.xml  BIOMD0000000701.xml  BIOMD0000000706.xml  BIOMD0000000816.xml  BIOMD0000000817.xml  BIOMD0000000834.xml  BIOMD0000000860.xml  BIOMD0000000862.xml  BIOMD0000000864.xml  BIOMD0000000918.xml  BIOMD0000000924.xml  BIOMD0000000994.xml  BIOMD0000001029.xml  BIOMD0000001039.xml  BIOMD0000001044.xml  BIOMD0000001072.xml  MODEL1904020001.xml  MODEL1910030001.xml  MODEL2202230002.xml  MODEL2301180001.xml  MODEL2402030002.xml
benchmarks/suites/: README.md
benchmarks/temp/: README.md  bench_lapack_gate.py  bench_large_dense.py  lu_bench.c  lu_split.c  lu_verify.c  measure_model.py  scan_dense.py
ci/: build_suitesparse.ps1  build_suitesparse.sh
docs/: conf.py  index.md  installation.md  quickstart.md  requirements.txt
docs/about/: architecture.md  benchmarks.md
docs/development/: building.md  extending.md
docs/reference/: api.md  expressions.md
docs/user-guide/: codegen.md  conservation-laws.md  events.md  interchange.md  loading-models.md  network-free.md  pybnf.md  results.md  sensitivities.md  simulation.md  solvers.md  steady-state.md  table-functions.md
harness/: .gitignore  README.md  calibrate_horizons.py  common.py  convert_bngl_to_sbml.py  jobs.yaml  requirements.txt  run_dsmts.py  run_jobs.py  run_rr_ssa_trajectory_parity.py  run_ssa_roundtrip.py  validate_jobs.py
harness/comparison/: BENCHMARK_INSTRUCTIONS.md  bench_1013_4engine.py  bench_amortization.py  bench_ant_3engine.py  bench_biomodels_codegen.py  bench_biomodels_sbml.py  bench_biomodels_warmup.py  bench_forward_sensitivity.py  bench_kinsol_dose_response.py  bench_mir_runtime.py  bench_nf_vs_nfsim.py  (+13 more)
parity_checks/: README.md  manifest.schema.json  manifest_schema.md  requirements-pybionetgen.txt
scripts/: EXPRTK_VENDORING.md  LOCAL_CI.md  MIR_VENDORING.md  NFSIM_VENDORING.md  RULEMONKEY_VENDORING.md  SUNDIALS_VENDORING.md  local_ci.py  local_ci_linux_docker.sh  local_ci_smoke.py  rebuild_editable.py  ship_wheel.py  vendor_exprtk.py  vendor_mir.py  vendor_nfsim.py  vendor_rulemonkey.py  vendor_sundials.py
src/: _bngsim_core.cpp  bngsim_api.cpp  cvode_simulator.cpp  expression.cpp  lapack_dense_linsol.cpp  model.cpp  model_builder.cpp  model_impl.hpp  net_file_loader.cpp  nfsim_simulator.cpp  result.cpp  rulemonkey_simulator.cpp  seed_count_rounding.hpp  ssa_simulator.cpp  steady_state.cpp  table_function.cpp
tests/: CMakeLists.txt  nfsim_connectivity_diag.cpp  test_bngsim.cpp  test_c_api.cpp  test_lapack_dense_linsol.cpp  test_nfsim_library.cpp  test_nfsim_simulator.cpp  test_seed_count_rounding.cpp  test_validation.cpp
tests/data/: case_sensitivity.net  const_expr_ref.cdat  const_expr_setparam.net  cumNcases.tfun  cumNcases_uppercase.tfun  degenerate_decay.net  derived_quotient.net  derived_rate_const.net  dose_response.tfun  dose_response_paren.tfun  drive.tfun  expr_param_ref.cdat  expr_param_species.net  expr_sens_chain.net  expr_sens_derived.net  expr_sens_unsupported.net  exprtk_reserved_words.net  fixed_species.net  fixed_species_ref.cdat  fractional_ssa.net  func_composition.net  hill_rewrite.net  homodimer_ssa.net  ic_derived.net  ic_direct.net  jac_selfcheck_amount_scaled.net  ltype_calcium_discontinuous_jacobian.net  mm_tqssa.net  nested_derived_rate_const.net  obs_sens_chain.net  obs_zero_arg_call.net  per_observable_jac.net  preequil_prod_deg.net  reactions_text_block.net  reversible_ref.cdat  sat_rewrite.net  saturation.net  saturation_ref.cdat  sign_as_parameter.net  simple_decay.net  (+19 more)
tests/data/nfsim/: composite_with_local_deps.xml  composite_with_reactant_count_dep.xml  empty_model.xml  exclude_reactants_gate.bngl  exclude_reactants_gate.xml  exprtk_shim_parity.xml  fractional_init.xml  funccols.xml  include_products_warn.bngl  include_products_warn.xml  include_reactants_gate.bngl  include_reactants_gate.xml  include_reactants_ungated.bngl  include_reactants_ungated.xml  malformed.xml  param_propagation.xml  reserved_param_frac.xml  ring2_homodimer.xml  ring_singlebond.xml  seed_concentration_param.xml  simple_nfsim.xml  sym_state_sites.xml  sym_stateless_sites.xml
tests/data/nfsim/compartment_test/: simple_compartment_system.xml
tests/data/nfsim/tfun_new_format/: invalid_bad_method.xml  invalid_expression_missing_placeholder.xml  invalid_inline_mismatched_lengths.xml  invalid_inline_missing_ydata.xml  invalid_inline_nonmonotonic_x.xml  invalid_missing_ctrname.xml  time_linear.tfun  valid_file_linear_time.xml  valid_file_step_time.xml  valid_inline_function.xml  valid_inline_linear_time.xml  valid_inline_observable.xml  valid_inline_parameter.xml  valid_inline_step_time.xml
tests/data/nfsim/tfun_test/: tfun_simple.xml
(+861 files in other folders)
